# inferdf-rs

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: builder.rs  cause.rs  class.rs  dataset.rs  id.rs  interpretation.rs  lib.rs  module.rs  pattern.rs  semantics.rs  uninterpreted.rs  utils.rs
core/src/builder/: class.rs  context.rs  dependency.rs
core/src/builder/class/: non_reflexive.rs  reflexive.rs
core/src/class/: classification.rs  group.rs
core/src/class/classification/: local.rs
core/src/class/group/: normalization.rs
core/src/dataset/: graph.rs  local.rs  standard.rs
core/src/dataset/local/: graph.rs
core/src/dataset/standard/: graph.rs
core/src/interpretation/: composite.rs  local.rs
core/src/interpretation/local/: reservable_slab.rs  reservation.rs
core/src/module/: composition.rs  local.rs  sub_module.rs
core/src/module/composition/: classification.rs  dataset.rs  interpretation.rs
core/src/module/composition/dataset/: graph.rs
core/src/module/composition/dataset/graph/: resource.rs
core/src/module/composition/interpretation/: resource.rs
core/src/module/sub_module/: into_global.rs  into_local.rs  try_into_global.rs
core/src/pattern/: map.rs
core/src/utils/: replace_id.rs  scc.rs  search.rs  sign.rs
deduction/: Cargo.toml  README.md
deduction/src/: lib.rs  rule.rs
deduction/src/rule/: action.rs  conclusion.rs  hypothesis.rs
examples/: rdf.rdfs  rdf.ron  rdfs.rdfs  rdfs.ron  test.nq  tldr.rdfs
examples/semantics/: owl.rdfs  tldr.rdfs
examples/tldr/: style.css  template.html
inference/: Cargo.toml  README.md
inference/src/: builder.rs  lib.rs  semantics.rs  utils.rs
inference/src/builder/: class.rs  context.rs  dependency.rs
inference/src/builder/class/: non_reflexive.rs  reflexive.rs
inference/src/builder/dependency/: local.rs
inference/src/semantics/: inference.rs
inference/src/semantics/inference/: rule.rs
inference/src/semantics/inference/rule/: action.rs  conclusion.rs  hypothesis.rs
rdfs/: Cargo.toml  README.md
rdfs/extensions/vscode/: README.md  grammar.json  language-configuration.json  main.js  package.json  snippets.json
rdfs/src/: building.rs  lib.rs  parsing.rs
src/: builder.rs  cause.rs  context.rs  dataset.rs  interpretation.rs  lib.rs  macros.rs  mode.rs  pattern.rs  rule.rs  semantics.rs  sign.rs  statement.rs  trust.rs  utils.rs
src/builder/: context.rs  dependency.rs
src/dataset/: graph.rs
src/expression/: literal.rs  mod.rs
src/expression/value/: comparable.rs  literal.rs  mod.rs  regex.rs
src/pattern/: map.rs  mod.rs
src/rule/: conclusion.rs  hypothesis.rs  macro.rs  mod.rs
src/semantics/: inference.rs  owl  rdf  rdfs  rdfs.rdfs  tldr
src/semantics/inference/: pattern.rs  rule.rs
src/semantics/inference/pattern/: map.rs
src/system/: deduction.rs  deduction_intstance.rs  mod.rs
src/utils/: mod.rs  replace_id.rs  search.rs  sign.rs
storage/: Cargo.toml  README.md  imhex.pat
storage/src/: build.rs  decode.rs  encode.rs  header.rs  id.rs  lib.rs  module.rs  page.rs  reader.rs  writer.rs
storage/src/header/: tag.rs  version.rs
storage/src/module/: cache.rs  classification.rs  dataset.rs  decode.rs  interpretation.rs
storage/src/module/cache/: slab.rs
storage/src/module/dataset/: graph.rs
storage/src/page/: graph.rs  graphs.rs  iri.rs  iris.rs  literal.rs  literals.rs  resource.rs  resource_terms.rs  resource_triples.rs  triple.rs  triples.rs
storage/src/reader/: cache.rs  decode.rs
storage/tests/: tests.rs
storage/tests/inputs/: .gitignore  t02.nq  t03.nq  t04.nq
tests/: validation.rs
