[workspace]
members = [
	"core",
	"storage",
	"inference",
	"rdfs",
	"cli"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = [
	"Timothée Haudebourg <timothee@haudebourg.net>",
	"Spruce Systems Inc."
]
edition = "2021"

[workspace.dependencies]
inferdf-core = { path = "core" }
inferdf-inference = { path = "inference" }
inferdf-storage = { path = "storage" }
inferdf-rdfs = { path = "rdfs" }
log = "0.4.17"
rdf-types = { version = "0.16", features = ["meta", "contextual", "serde"] }
nquads-syntax = "0.15.0"
iref = { version = "3.1.2", features = ["hashbrown", "serde"] }
langtag = "0.3.3"
derivative = "2.2.0"
educe = "0.4.22"
hashbrown = "0.14.0"
contextual = "0.1.6"
locspan = { version = "0.7.13", features = ["reporting"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.40"
normal-form = "0.1.1"
paged = "0.1.1"
clap = { version = "4.0", features = ["derive"] }
stderrlog = "0.5.4"
codespan-reporting = "0.11.1"