[package]
name = "inferdf-cli"
version = "0.1.0"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2021"

[dependencies]
inferdf-core.workspace = true
inferdf-inference.workspace = true
inferdf-storage.workspace = true
clap = { version = "4.0", features = ["derive"] }
rdf-types.workspace = true
# nquads-syntax = "0.12.0"
nquads-syntax = { git = "https://github.com/timothee-haudebourg/nquads-syntax.git", rev = "b53c5dc" }
contextual.workspace = true
static-iref = "2.0.0"
locspan = { version = "0.7.13", features = ["reporting"] }
serde.workspace = true
stderrlog = "0.5.4"
ron = "0.8"