[package]
name = "inferdf-cli"
version = "0.1.0"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2021"
default-run = "inferdf-cli"

[dependencies]
inferdf.workspace = true
inferdf-deduction.workspace = true
inferdf-storage.workspace = true
inferdf-rdfs.workspace = true
clap.workspace = true
rdf-types.workspace = true
nquads-syntax.workspace = true
contextual.workspace = true
static-iref = "3.0.0"
locspan = { version = "0.7.13", features = ["reporting"] }
serde.workspace = true
log.workspace = true
stderrlog.workspace = true
codespan-reporting.workspace = true
thiserror.workspace = true
ron = "0.8"
yansi = "0.5.1"