[package]
name = "inferdf"
version = "0.1.0"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2021"

[dependencies]
log.workspace = true
rdf-types.workspace = true
iref.workspace = true
derivative.workspace = true
educe.workspace = true
locspan.workspace = true
langtag = { workspace = true, features = ["serde"] }
slab = "0.4.7"
hashbrown.workspace = true
im = "15.1.0"
contextual = "0.1.6"
serde.workspace = true
thiserror.workspace = true
paged = { workspace = true, features = ["derive"] }
smallvec = "1.11.0"
normal-form.workspace = true
appendlist = "1.4.0"
memo-map = "0.3.2"
indexmap = "1.9.3"