[package]
name = "inferdf-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
inferdf-core.workspace = true
iref.workspace = true
rdf-types.workspace = true
thiserror.workspace = true
langtag.workspace = true
derivative.workspace = true
locspan.workspace = true
educe.workspace = true
paged.workspace = true

[dev-dependencies]
inferdf-inference.workspace = true
nquads-syntax.workspace = true
contextual.workspace = true
paged = { workspace = true, features = ["derive"] }